--- a/styles.css
+++ b/styles.css
@@ -21,8 +21,8 @@ h1, h2 {
 
 #title-container {
     position: absolute;
-    left: -300px; /* Adjusted value to align with main content */
-    top: 80%;
+    left: -280px; /* Adjusted value to align with main content */
+    top: 50%;
     transform: translateY(-50%) rotate(-90deg);
     transform-origin: left top 0;
     background-color: #333;
@@ -89,28 +89,34 @@ button.affordable {
     display: flex;
     align-items: center;
     margin-top: 10px;
+    flex-direction: column;
+    text-align: left;
 }
 
-.upgrade-img {
-    width: 50px;
-    height: 50px;
-    margin-right: 10px;
+.upgrade .upgrade-cost {
+    margin-top: 5px;
 }
 
 .purchased-upgrade {
     display: flex;
     align-items: center;
     margin-top: 10px;
+    flex-direction: column;
+    text-align: left;
 }
 
 .purchased-upgrade img {
     width: 50px;
     height: 50px;
-    margin-right: 10px;
+    margin-bottom: 5px;
+}
+
+.purchased-upgrade .upgrade-earnings {
+    margin-top: 5px;
 }
 
 .grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+    grid-template-columns: repeat(3, 1fr); /* Expand to 3 columns */
     gap: 10px;
 }
