--- a/styles.css
+++ b/styles.css
@@ -188,3 +188,68 @@ button:disabled {
         width: auto; /* Auto width for mobile */
     }
 }
+
+#prestigeButton {
+    background-color: #f39c12;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin-top: 10px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+#prestigeButton:hover {
+    background-color: #e67e22;
+}
+
+.prestige-text {
+    font-size: 2em;
+    color: gold;
+    font-weight: bold;
+    transition: all 0.5s ease;
+}
+
+.prestige-count {
+    font-size: 2em;
+    color: gold;
+    font-weight: bold;
+    transition: all 0.5s ease;
+}
+
+.multiplier-count {
+    font-size: 0.75em; /* Smaller font size */
+    color: gold;
+    font-weight: normal;
+}
+
+.prestige-level-1 {
+    color: gold;
+    text-shadow: 0 0 5px #ffd700;
+}
+
+.prestige-level-2 {
+    color: gold;
+    text-shadow: 0 0 10px #ffd700, 0 0 20px #ffd700;
+}
+
+.prestige-level-3 {
+    color: gold;
+    text-shadow: 0 0 15px #ffd700, 0 0 30px #ffd700;
+}
+
+.prestige-level-4 {
+    color: gold;
+    text-shadow: 0 0 20px #ffd700, 0 0 40px #ffd700;
+}
+
+.prestige-level-5 {
+    color: gold;
+    text-shadow: 0 0 25px #ffd700, 0 0 50px #ffd700;
+}
+
+
+
+
+/* Add more levels as needed */
+
